--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <tytle>Tiffany's Journel</tytle>
+  <tytle>Tiffany's Journal</tytle>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div id="header">
     <div class="container">
-      <a id="header-title" href-"index.htm">My Journel</a>
+      <a id="header-title" href-"index.htm">My Journal</a>
       <ul id="header-nav">
               <li><a href="About.html">About</a></li>
         <li><a href="mailto:Tiffany.Canfield1991@gmail.com">Contact</a></li>
